--- a/content/blog/introducing-support-for-the-apache-flink-web-ui.adoc
+++ b/content/blog/introducing-support-for-the-apache-flink-web-ui.adoc
@@ -47,7 +47,7 @@ To that end, the open-source link:https://github.com/decodableco/decodable-pipel
 I am also excited to announce the Decodable SDK version link:https://mvnrepository.com/artifact/co.decodable/decodable-pipeline-sdk/1.0.0.Beta2[1.0.0.Beta2], which lets you annotate your jobs with metadata about the connected streams:
 
 
-[source,java]
+[source,java,linenums]
 ----
 
 ----
