--- a/content/blog/introducing-the-decodable-sdk-for-custom-pipelines.adoc
+++ b/content/blog/introducing-the-decodable-sdk-for-custom-pipelines.adoc
@@ -39,7 +39,7 @@ The simplest way for getting started with building your Flink jobs for the Decod
 Run the following to start a new Maven project:
 
 
-[source,shell]
+[source,shell,linenums]
 ----
 
 ----
@@ -48,7 +48,7 @@ Run the following to start a new Maven project:
 The SDK is link:https://central.sonatype.com/artifact/co.decodable/decodable-pipeline-sdk/1.0.0.Beta1[available from Maven Central], so you can simply add it as a dependency to the _pom.xml_ file of the newly generated project:
 
 
-[source,xml]
+[source,xml,linenums]
 ----
 
 ----
@@ -57,7 +57,7 @@ The SDK is link:https://central.sonatype.com/artifact/co.decodable/decodable-pip
 Alternatively, if you are using Gradle, add the dependency to your _build.gradle_ file like so:
 
 
-[source,xml]
+[source,xml,linenums]
 ----
 
 ----
@@ -71,7 +71,7 @@ You can use these two interfaces to integrate your custom stream processing logi
 Here's an example of a typical job implementation:
 
 
-[source,java]
+[source,java,linenums]
 ----
 
 ----
@@ -94,7 +94,7 @@ The testing framework uses the link:https://testcontainers.com/[Testcontainers] 
 Here is a test for the stream processing job above:
 
 
-[source,java]
+[source,java,linenums]
 ----
 
 ----
@@ -118,7 +118,7 @@ Then, package your job as a JAR file by running _mvn clean verify_ from the root
 Next, deploy your job to Decodable using the Decodable CLI:
 
 
-[source,shell]
+[source,shell,linenums]
 ----
 
 ----
@@ -132,7 +132,7 @@ At this point, your job is deployed but it isn't running yet.
 You can activate it either in the CLI like so:
 
 
-[source,shell]
+[source,shell,linenums]
 ----
 
 ----
