--- a/content/blog/processing-github-webhooks-with-decodable.adoc
+++ b/content/blog/processing-github-webhooks-with-decodable.adoc
@@ -47,7 +47,7 @@ For the purposes of our use case, we're just interested in the *commits* propert
 It's an array with an element for each pushed commit, looking like so:
 
 
-[source,json]
+[source,json,linenums]
 ----
 
 ----
@@ -57,7 +57,7 @@ After importing the schema into Decodable, the stream definition looks like this
 Note how the *commits* field of the stream schema precisely matches the event structure above:
 
 
-[source,shell]
+[source,shell,linenums]
 ----
 
 ----
@@ -86,7 +86,7 @@ It offers a generous free tier which provides us with more than enough resources
 A simple worker which adds the required authorization header and wraps the webhook event into an array can be implemented with a few lines of JavaScript like this:
 
 
-[source,javascript]
+[source,javascript,linenums]
 ----
 
 ----
@@ -102,7 +102,7 @@ For the given task, a SQL pipeline is an excellent fit.
 The total number of commits per author in the stream can be easily expressed using SQL:
 
 
-[source,sql]
+[source,sql,linenums]
 ----
 
 ----
