--- a/content/blog/support-for-running-your-own-apache-flink-jobs-is-coming-to-decodable.adoc
+++ b/content/blog/support-for-running-your-own-apache-flink-jobs-is-coming-to-decodable.adoc
@@ -64,7 +64,7 @@ To further simplify the integration of custom Flink jobs with the Decodable plat
 The following example code shows how this could look like (subject to change, this SDK has not been released yet):
 
 
-[source,java]
+[source,java,linenums]
 ----
 
 ----
